--- a/src/content/page/index.mdx
+++ b/src/content/page/index.mdx
@@ -1,7 +1,6 @@
 ---
-title: Nebulix, a Fast & Green Theme Based on Astro + Static CMS
-description: "A Universe of Possibilities: Blogs, Portfolios, Restaurant Menus,
-  Online Store, and Beyond"
+title: Malik IBO, Portfolio
+description: "Je suis un développeur créatif qui est actuellement basé à Montpellier, France."
 intro: "A Universe of Possibilities: Blogs, Portfolios, Restaurant Menus, Online
   Store, and Beyond"
 hero_template: image
