modification de la langue dans index de mes compétences clés

--- a/src/content/page/index.mdx
+++ b/src/content/page/index.mdx
@@ -1,21 +1,20 @@
 ---
 title: Malik IBO, Portfolio
 description: "Je suis un développeur créatif qui est actuellement basé à Montpellier, France."
-intro: "A Universe of Possibilities: Blogs, Portfolios, Restaurant Menus, Online
-  Store, and Beyond"
+intro: "Bienvenue sur mon portfolio ! Je suis Malik, passionné par le Big Data, l'architecture des données et l'intelligence artificielle."
 hero_template: image
 template: full
 container: md
 hero_buttons:
   - component: Link
-    label: Learn More
+    label: En savoir plus
     href: "#more"
     class: surface-primary
     icon_only: false
     icon: /src/icons/down-line.svg
     color: surface-primary
   - component: Link
-    label: docs
+    label: Projets
     href: /blog/tag/docs
     class: optional
     icon_only: false
@@ -29,67 +28,59 @@ blocks:
     block_class: " py-20 text-center"
     features:
       - content: >
-          ### Tailwind CSS
+          ### Analyse de Données Avancée
 
-
-          Transform your template's appearance with the beloved Tailwind CSS framework. Easily customize your design, bringing your unique vision to life.
+          Ma spécialité réside dans l'analyse avancée de données. J'ai une expérience significative dans l'extraction de connaissances exploitables à partir de grandes quantités de données, utilisant divers outils et langages tels que Python, R et SQL.
         icon: /src/icons/tailwind.svg
         color: bg-[#38bdf8] text-white
       - color: bg-[#fc0] text-black
         icon: /src/icons/shop.svg
         content: >
-          ### Webshop
+          ### Intelligence Artificielle
 
-
-          Experience a straightforward webshop, powered by SnapCart. It seamlessly handles product variations and even accommodates digital products.
+          Mon intérêt pour l'IA se manifeste à travers la mise en place de modèles prédictifs, l'apprentissage automatique et le déploiement de solutions intelligentes pour résoudre des problèmes concrets.
       - icon: /src/icons/blocks-group-solid.svg
         content: >
-          ### Page Block Builder
+          ### Gestion de Bases de Données
 
-
-          Craft your perfect page effortlessly with our selection of versatile blocks. Customize and extend your page exactly the way you want it.
+          Je maîtrise la gestion et l'optimisation de bases de données pour assurer des performances optimales, intégrité et sécurité des données. De la modélisation à l'implémentation, je suis familier avec les bases de données SQL et NoSQL.
         color: surface-secondary
         href: ""
       - content: >
-          ### Full-Text Search
+          ### Visualisation de Données
 
-
-          Experience lightning-fast full-text search capabilities with Pagefind. Our integrated search engine seamlessly enhances your site's user experience.
+          La visualisation des données est essentielle pour la compréhension. J'utilise des outils de visualisation avancés pour présenter les insights de manière claire et compréhensible pour les parties prenantes.
         icon: /src/icons/book-search-24-regular.svg
         color: surface-accent
       - icon: /src/icons/template.svg
         content: >
-          ### Multiple Templates
+           ### Développement Logiciel
 
-
-          Tailor your website to perfection with a variety of templates for pages, blogs, shops, portfolios, and menus. Craft each page precisely as you envision.
+          Je suis habile en programmation, notamment dans le développement de solutions logicielles pour le traitement et l'analyse de données massives.
         color: surface-success
         href: ""
       - icon: /src/icons/menu.svg
         content: >
-          ### Restaurant Menu
+           ### Domaine de la Santé
 
-
-          Explore our user-friendly menu, thoughtfully designed with clear labels and detailed information about allergens for your dining peace of mind.
+          Grâce à mon expérience en alternance dans une clinique de santé, je comprends les défis uniques de la gestion et de l'analyse de données sensibles et vitales pour le secteur médical.
         color: surface-warning
         href: ""
       - href: "#"
         icon: /src/icons/git.svg
         content: >
-          ### Git-Based
+           ### Collaboration Efficace
 
-
-          With Astro + Static CMS, your content finds its home in a Git repository, ensuring efficient content management and collaboration.
+          Je suis habitué à travailler dans des environnements collaboratifs et à utiliser des outils de gestion de projets pour une productivité et une communication optimales.
         color: surface-primary
       - content: >
-          ### Light & Darkmode
+          ### Innovation Technologique
 
-
-          Give your visitors the freedom to choose their preferred color scheme, ensuring a personalized browsing experience.
+          Je suis constamment à l'affût des dernières avancées technologiques pour les intégrer dans des solutions innovantes en Big Data et en Intelligence Artificielle.
         color: surface-dark
         icon: /src/icons/dark-theme-20-filled.svg
     content: |+
-      ## Nebulix Features
+      ## Mes Compétences Clés
 
 
 
